react-materialize instead of material-ui

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,11 +1,13 @@
+body{
+  padding: 20px;
+}
+
 .App {
+
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+
 
 .App-header {
   background-color: #222;
@@ -14,9 +16,7 @@
   color: white;
 }
 
-.App-intro {
-  font-size: large;
-}
+
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
